@@ -29,7 +29,7 @@ a:hover {
     margin: 0em 0 0 12.2em;
     padding: 0em 1em 1.5em 1em;
     border-left: 1px solid #959595;
-    line-height: 1.5em;
+    line-height: 1.5;
 }
 
 #column-one {
@@ -59,7 +59,7 @@ img {
 }
 p {
     margin: 0.4em 0em 0.5em 0em;
-    line-height: 1.5em;
+    line-height: 1.5;
 }
 p img { margin: 0; }
 
